# curateur

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LICENSE  MAME_README.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASEA_COMPLETE.md  PHASEB_COMPLETE.md  PHASEC_COMPLETE.md  PHASED_COMPLETE.md  PHASE_D_UI_INTEGRATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SEARCH_FALLBACK_IMPLEMENTATION.md  TESTING_STRATEGY.md  TEXTUAL_MOCKUP_README.md  TEXTUAL_UI_IMPLEMENTATION_PLAN.md  TODO.md  ThrottleManager_WorkQueueManager.md  config.yaml.example  constraints.txt  demo_scanner.py  mame_config.yaml.example  pyproject.toml  pytest.ini  requirements.txt
.git-hooks/: pre-commit  pre-commit.example
.github/: copilot-instructions.md
.github/workflows/: code-quality.yml.example  release.yml  tests.yml
curateur/: __init__.py  cli.py
curateur.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
curateur/api/: __init__.py  cache.py  client.py  connection_pool.py  credentials.py  error_handler.py  match_scorer.py  name_verifier.py  obfuscator.py  rate_limiter.py  rate_override.py  response_parser.py  system_map.py  throttle.py
curateur/config/: es_systems.py  loader.py  validator.py
curateur/gamelist/: __init__.py  backup.py  game_entry.py  generator.py  integrity_validator.py  metadata_merger.py  parser.py  path_handler.py  xml_writer.py
curateur/mame/: __init__.py  history_parser.py  ini_parser.py  mame_gamelist_generator.py  mame_media_organizer.py  mame_metadata_builder.py  mame_rom_copier.py  mame_xml_parser.py  media_extractor.py
curateur/media/: __init__.py  downloader.py  media_downloader.py  media_types.py  mismatch_cleaner.py  organizer.py  region_selector.py  url_selector.py
curateur/scanner/: __init__.py  disc_handler.py  hash_calculator.py  m3u_parser.py  rom_scanner.py  rom_types.py
curateur/tools/: README.md  __init__.py  code_quality_check.py  copy_rom_subset.py  deduplicate_multidisc.py  fix_disc_media_names.py  generate_system_map.py  mame_cli.py  organize_roms.py  reset_favorites.py  sanity_check.py  setup_dev_credentials.py  top_games_list.py
curateur/ui/: __init__.py  console_ui.py  event_bus.py  event_log_handler.py  events.py  headless_logger.py  keyboard_listener.py  prompts.py  textual_mockup.py  textual_theme.tcss  textual_ui.py
curateur/workflow/: __init__.py  change_detector.py  checkpoint.py  evaluator.py  hash_comparator.py  media_handler.py  orchestrator.py  performance.py  progress.py  skip_manager.py  thread_pool.py  update_coordinator.py  work_queue.py
tests/: ACCEPTANCE_TESTS.md  API_TESTING_SUMMARY.md  README.md  SEARCH_ENDPOINT_SUMMARY.md  conftest.py  test_api_client.py  test_api_integration.py  test_api_response_parser.py  test_api_search.py  test_cli.py  test_cli_run.py  test_e2e_integration.py  test_extra_fields.py  test_milestone2_phase_a.py  test_milestone2_phase_b.py  test_milestone2_phase_c.py  test_milestone2_phase_d.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py
tests/api/: test_api_client.py  test_api_integration.py  test_api_live.py  test_api_response_parser.py  test_api_search.py  test_cache.py  test_cache_extended.py  test_client.py  test_client_comprehensive.py  test_client_live.py  test_connection_pool.py  test_error_handler.py  test_match_scorer.py  test_name_verifier.py  test_obfuscator.py  test_rate_override.py  test_response_parser.py  test_throttle.py
tests/config/: conftest.py  test_es_systems.py  test_integration.py  test_loader.py  test_validator.py
tests/data/: README.md  gamelist_valid.xml
tests/data/config/: es_systems_invalid_root.xml  es_systems_valid.xml
tests/data/scanner/: sample.m3u
tests/fixtures/: README.md  test_config.yaml
tests/fixtures/api/: README.md  jeuInfos.xml  jeuRecherche.xml  search_multiple_results.xml  search_no_results.xml  search_partial_metadata.xml  search_single_result.xml  webapiv2.html
tests/fixtures/api/errors/: 401_api_closed_nonmembers.xml  403_invalid_creds.xml  404_not_found.xml  423_api_closed.xml  429_thread_limit.xml  430_quota_exceeded.xml
tests/fixtures/api/malformed/: invalid_root.xml  missing_jeu.xml  not_xml.xml
tests/fixtures/api/partial/: minimal_metadata.xml  no_media.xml
tests/fixtures/config/es_systems/: empty.xml  invalid_root.xml  malformed.xml  missing_platform.xml  multiple_formats.xml  nested_name_invalid.xml  no_extensions.xml  valid.xml
tests/fixtures/config/invalid/: bad_log_level.yaml  bad_match_mode.yaml  bad_max_results.yaml  bad_media_types.yaml  (+9 more)
tests/gamelist/: TEST_STATUS.md  conftest.py  test_backup.py  test_game_entry.py  test_gamelist_integration.py  test_generator.py  test_generator_integration.py  test_integrity_validator.py  test_merger.py  test_metadata_merger.py  test_parser.py  test_path_handler.py  test_sortname.py  test_sortname_xml_integration.py  test_xml_writer.py
tests/integration/: test_cli_phase_d_integration.py  test_e2e_integration.py  test_extra_fields.py  test_milestone2_phase_c.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase_e_integration.py
tests/media/: test_downloader.py  test_media_downloader.py  test_media_types.py  test_organizer.py  test_region_selector.py  test_url_selector.py
tests/scanner/: test_disc_handler.py  test_hash_calculator.py  test_m3u_parser.py  test_rom_scanner.py
tests/tools/: generate_api_fixtures.py  test_organize_roms.py  test_tools.py
tests/ui/: test_console_ui.py  test_event_bus.py  test_event_log_handler.py  test_headless_logger.py  test_interactive_search.py  test_keyboard_listener.py  test_prompts.py  test_textual_ui.py  test_ui_widgets.py
tests/workflow/: test_checkpoint.py  test_evaluator.py  test_orchestrator.py  test_orchestrator_core.py  test_performance.py  test_progress.py  test_thread_pool.py  test_thread_pool_comprehensive.py  test_work_queue.py
(+15 files in other folders)
