[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curateur"
version = "1.0.0"
description = "ScreenScraper ROM Metadata & Media Scraper for ES-DE"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "jbruns"}
]
dependencies = [
    "PyYAML>=6.0.3,<7.0.0",
    "lxml>=6.0.2,<7.0.0",
    "httpx>=0.28.1,<0.29",
    "Pillow>=12.0.0,<13.0.0",
    "rich>=14.2.0,<15.0.0",
    "psutil>=7.1.3,<8.0.0",
]

[project.scripts]
curateur = "curateur.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "respx>=0.22.0,<0.23",  # HTTP mocking for httpx
]

[tool.setuptools]
packages = ["curateur", "curateur.api", "curateur.config", "curateur.scanner", 
            "curateur.media", "curateur.gamelist", "curateur.tools"]
