[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curateur"
version = "1.0.0"
description = "ScreenScraper ROM Metadata & Media Scraper for ES-DE"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "jbruns"}
]
keywords = ["retrogaming", "emulation", "metadata", "screenscraper", "es-de", "roms", "emulationstation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6.0.3,<7.0.0",
    "lxml>=6.0.2,<7.0.0",
    "httpx>=0.28.1,<0.29",
    "Pillow>=12.0.0,<13.0.0",
    "rich>=14.2.0,<15.0.0",
    "psutil>=7.1.3,<8.0.0",
    "textual>=7.3.0,<7.4.0",
]

[project.urls]
Homepage = "https://github.com/jbruns/curateur"
Repository = "https://github.com/jbruns/curateur"
Issues = "https://github.com/jbruns/curateur/issues"
Changelog = "https://github.com/jbruns/curateur/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jbruns/curateur#readme"

[project.scripts]
curateur = "curateur.cli:main"
curateur-mame = "curateur.tools.mame_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "respx>=0.22.0,<0.23",  # HTTP mocking for httpx
    "black>=25.12.0,<26.0.0",
]

[tool.setuptools]
packages = ["curateur", "curateur.api", "curateur.config", "curateur.scanner", 
            "curateur.media", "curateur.gamelist", "curateur.tools"]
