[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curateur"
version = "1.0.0"
description = "ScreenScraper ROM Metadata & Media Scraper for ES-DE"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "jbruns"}
]
keywords = ["retrogaming", "emulation", "metadata", "screenscraper", "es-de", "roms", "emulationstation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6.0.3,<7.0.0",
    "lxml>=6.0.2,<7.0.0",
    "httpx>=0.28.1,<0.29",
    "Pillow>=12.0.0,<13.0.0",
    "rich>=14.2.0,<15.0.0",
    "psutil>=7.1.3,<8.0.0",
    "textual>=8.2.5,<8.3.0",
]

[project.urls]
Homepage = "https://github.com/jbruns/curateur"
Repository = "https://github.com/jbruns/curateur"
Issues = "https://github.com/jbruns/curateur/issues"
Changelog = "https://github.com/jbruns/curateur/blob/main/CHANGELOG.md"
Documentation = "https://github.com/jbruns/curateur#readme"

[project.scripts]
curateur = "curateur.cli:main"
curateur-mame = "curateur.tools.mame_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "respx>=0.22.0,<0.23",  # HTTP mocking for httpx
    "ruff>=0.11.0,<1.0.0",
]

[tool.setuptools]
packages = ["curateur", "curateur.api", "curateur.config", "curateur.scanner", 
            "curateur.media", "curateur.gamelist", "curateur.tools"]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks unit tests for single functions/classes",
    "integration: marks integration tests that test multiple components together",
    "e2e: marks end-to-end tests that exercise the full CLI/workflow",
    "live: marks tests that make real API calls to ScreenScraper (deselect with '-m \"not live\"')",
    "slow: marks tests that take significant time to run",
]
addopts = "-v --strict-markers --tb=short"
testpaths = ["tests"]
minversion = "3.8"

[tool.coverage.run]
source = ["curateur"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length enforced by ruff format

[tool.ruff.format]
quote-style = "double"
